# scylladb-uploader

./: .gitignore  Cargo.toml  Makefile  README.md  Scylla-de.session.sql
docker/: Dockerfile
src/: command_line.rs  main.rs  processors.rs
src/entities/: data_value.rs  mod.rs
src/persistence/: mod.rs
src/persistence/database/: database_client.rs  mod.rs
src/persistence/files_system/: dataset_ext.rs  file_type.rs  local_dataset.rs  mod.rs  s3_dataset.rs
